// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots organisms|hero Hero basic 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__organism"
    >
      <article
        class="hero hero--basic"
      >
        <section
          class="container hero__container"
        >
          <div
            class="flexgrid flexgrid--gutter flexgrid--column-reversed flexgrid--mobile-xl-row"
          >
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="hero__description"
              >
                <h1>
                  Lorem ipsum dolor sit amet
                </h1>
                 
                <h2
                  class="hero__subtitle"
                >
                  Maecenas faucibus mollis interdum nulla vitae elit libero a pharetra augue
                </h2>
                 
                <p
                  class="copy--intro"
                >
                  Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue.
                </p>
                 
                <div
                  class="cta__block"
                >
                  <a
                    class="link--button link--icon button button--primary"
                    href="https://www.ultimaker.com/resellers"
                    rel="noopener"
                    target="_self"
                    type="ContentButton"
                  >
                    <!---->
                     
                    <span
                      class="link__underline"
                    >
                      
        Find a reseller
    
                    </span>
                  </a>
                  <a
                    class="link--large link--icon link link--large"
                    href="https://3d.ultimaker.com/requestquote"
                    rel="noopener"
                    target="_blank"
                    type="ContentLink"
                  >
                    <!---->
                     
                    <span
                      class="link__underline"
                    >
                      
        Get a quote
    
                    </span>
                  </a>
                </div>
              </div>
            </div>
             
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="hero__image--basic"
              >
                <img
                  alt="An example image"
                  class="img--contain img--loading"
                  src="https://images.ctfassets.net/yadj1kx9rmg0/wtrHxeu3zEoEce2MokCSi/cf6f68efdcf625fdc060607df0f3baef/quwowooybuqbl6ntboz3.jpg?w=20"
                />
              </div>
            </div>
          </div>
        </section>
      </article>
    </section>
  </section>
</section>
`;

exports[`Storyshots organisms|hero Hero product 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__organism"
    >
      <article
        class="hero hero--products"
      >
        <section
          class="container hero__container"
        >
          <div
            class="flexgrid flexgrid--gutter flexgrid--column-reversed flexgrid--mobile-xl-row"
          >
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="hero__description"
              >
                <h1>
                  Lorem ipsum dolor sit amet
                </h1>
                 
                <p
                  class="copy--intro"
                >
                  Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue.
                </p>
                 
                <div
                  class="price-table hero__price-table"
                >
                  <ul
                    class="price-table__list"
                    role="tablist"
                  >
                    <li
                      class="price-table__item"
                      role="tab"
                    >
                      <!---->
                       
                      <span
                        class="price-table__info"
                      >
                        <small
                          class="price-table__tagline"
                        >
                          
                                        Product,
                                        300g
                                        from
                                    
                        </small>
                         
                        <span
                          class="currency"
                        >
                          <span
                            class="currency__type"
                          >
                            EUR
                          </span>
                          
    33

                        </span>
                      </span>
                    </li>
                  </ul>
                   
                  <small
                    class="price-table__disclaimer"
                  >
                    *excl. VAT
                  </small>
                </div>
                 
                <a
                  class="button button--primary hero__button"
                  href=""
                >
                  Some label
                </a>
                 
                <ul
                  class="link-list link-list--icon hero__link-list"
                >
                  <li
                    class="link-list__item"
                  >
                    <a
                      class=""
                      href="#/#"
                    >
                      <!---->
                       Content-link
                    </a>
                  </li>
                   
                  <li
                    class="link-list__item"
                  >
                    <a
                      class=""
                      href="#/#"
                    >
                      <!---->
                       Download link
                    </a>
                  </li>
                  <li
                    class="link-list__item"
                  >
                    <a
                      class=""
                      href="#/#"
                    >
                      <!---->
                       Download link
                    </a>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="hero__image--product"
              >
                <cms-image
                  image="[object Object]"
                  orientation="square"
                />
              </div>
            </div>
          </div>
        </section>
      </article>
    </section>
  </section>
</section>
`;

exports[`Storyshots organisms|hero Hero products application 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__organism"
    >
      <article
        class="hero hero--products-application"
      >
        <div
          class="hero__container--top"
        >
          <picture>
            <source
              media="(min-width: 1201px)"
              srcset=""
            />
             
            <!---->
             
            <source
              media="(min-width: 768px)"
              srcset=""
            />
             
            <!---->
             
            <!---->
             
            <source
              media="(max-width: 480px)"
              srcset="/generator/svg/1000/500"
            />
             
            <img
              alt=""
              class="img--responsive hero__image--full img--lazy"
              src=""
            />
          </picture>
           
          <div
            class="hero__image-overlay"
          />
           
          <div
            class="container"
          >
            <div
              class="flexgrid flexgrid--gutter"
            >
              <div
                class="flexgrid__cell--xs-6"
              >
                <div
                  class="hero__headline"
                >
                  <h1>
                    Lorem ipsum
                  </h1>
                </div>
              </div>
               
              <div
                class="flexgrid__cell"
                style="position: relative;"
              >
                <p
                  class="hero__subtitle"
                >
                  Donec ullamcorper nulla non metus auctor fringilla
                </p>
                 
                <picture>
                  <!---->
                   
                  <!---->
                   
                  <source
                    media="(min-width: 768px)"
                    srcset=""
                  />
                   
                  <!---->
                   
                  <!---->
                   
                  <source
                    media="(max-width: 480px)"
                    srcset="/generator/svg/600/600/cccccc"
                  />
                   
                  <img
                    alt=""
                    class="img--responsive hero__image--product img--lazy"
                    src=""
                  />
                </picture>
              </div>
               
              <div
                class="flexgrid__cell--xs-6"
              >
                <div
                  class="hero__usp-container"
                >
                  <div
                    class="hero__usp usp--icon"
                  >
                    <!---->
                     
                    <small
                      class="usp__label"
                    >
                      123 x 123 x 123mm
                    </small>
                  </div>
                  <div
                    class="hero__usp usp--icon"
                  >
                    <!---->
                     
                    <small
                      class="usp__label"
                    >
                      Down to 34 microns
                    </small>
                  </div>
                  <div
                    class="hero__usp usp--icon"
                  >
                    <!---->
                     
                    <small
                      class="usp__label"
                    >
                      Some text
                    </small>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="container"
        >
          <div
            class="flexgrid flexgrid--gutter"
          >
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="hero__description"
              >
                <p
                  class="copy--intro"
                >
                  Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue.
                </p>
                 
                <p>
                  TODO: Pricetable
                </p>
                 
                <a
                  class="button button--primary hero__button"
                  href="#/#"
                >
                  Some label
                </a>
                 
                <ul
                  class="link-list link-list--icon hero__link-list"
                >
                  <li
                    class="link-list__item"
                  >
                    <a
                      class=""
                      href="#/#"
                    >
                      <!---->
                       Content-link
                    </a>
                  </li>
                  <li
                    class="link-list__item"
                  >
                    <a
                      class=""
                      href="#/#"
                    >
                      <!---->
                       Content-link
                    </a>
                  </li>
                  <li
                    class="link-list__item"
                  >
                    <a
                      class=""
                      href="#/#"
                    >
                      <!---->
                       Content-link
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </article>
    </section>
  </section>
</section>
`;

exports[`Storyshots organisms|hero Hero text 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__organism"
    >
      <article
        class="hero hero--text"
      >
        <div
          class="container"
        >
          <h1>
            Lorem ipsum dolor sit amet, consectetur adipisicing elit
          </h1>
           
          <div
            class="hero__content content--rich"
          >
            &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, beatae blanditiis, consequuntur corporis delectus dolore excepturi illo ipsa nulla, pariatur perspiciatis provident quae ratione unde veritatis! Atque enim est ratione!&lt;/p&gt;&lt;h2&gt;Lorem ipsum dolor sit amet&lt;/h2&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias at atque autem beatae blanditiis consequatur cum deleniti eaque earum error et, exercitationem fuga hic laudantium magnam minima nam nihil nobis perspiciatis quo rem repellat reprehenderit sed sint soluta tempora voluptatem! A animi deserunt earum explicabo modi quo rem voluptatem. Facere!&lt;/p&gt;&lt;h2&gt;Lorem ipsum dolor sit amet&lt;/h2&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid at deserunt dignissimos dolor exercitationem itaque iure, iusto laboriosam laudantium magnam nobis odio officia placeat, porro &lt;a href='#'&gt;quos rem repellat&lt;/a&gt; repellendus sint!&lt;/p&gt;&lt;h3&gt;Lorem ipsum dolor sit amet&lt;/h3&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, ratione, soluta. A aut commodi cum, deserunt illum magnam nisi perspiciatis quis vero voluptas! Cumque eum iure neque omnis veritatis. Aut beatae consectetur culpa dolorem eius, exercitationem fuga harum ipsa ipsam laborum necessitatibus nemo non officiis perspiciatis placeat praesentium provident quaerat quisquam quod sapiente sit tempore tenetur veniam! At, cupiditate temporibus.&lt;/p&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, ratione, soluta. A aut commodi cum, deserunt illum magnam nisi perspiciatis quis vero voluptas! Cumque eum iure neque omnis veritatis. Aut beatae consectetur culpa dolorem eius, exercitationem fuga harum ipsa ipsam laborum necessitatibus nemo non officiis perspiciatis placeat praesentium provident quaerat quisquam quod sapiente sit tempore tenetur veniam! At, cupiditate temporibus.&lt;/p&gt;&lt;h3&gt;Lorem ipsum dolor&lt;/h3&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quod tempore vitae voluptatum. Doloribus ducimus enim, eum explicabo illum nemo nulla omnis quae quam quia rem ut, velit voluptate voluptates.&lt;/p&gt;&lt;table&gt; &lt;thead&gt; &lt;tr&gt; &lt;th scope='col'&gt;Some label&lt;/th&gt; &lt;th scope='col'&gt;Some label&lt;/th&gt; &lt;/tr&gt; &lt;/thead&gt; &lt;tbody&gt; &lt;tr&gt; &lt;th scope='row'&gt;Some label&lt;/th&gt; &lt;td&gt;Aenean lacinia bibendum nulla sed consectetur. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. &lt;/td&gt; &lt;/tr&gt; &lt;tr&gt; &lt;th scope='row'&gt;Some label&lt;/th&gt; &lt;td&gt;Aenean lacinia bibendum nulla sed consectetur. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. &lt;/td&gt; &lt;/tr&gt; &lt;/tbody&gt;&lt;/table&gt;&lt;h3&gt;Lorem ipsum dolor sit amet&lt;/h3&gt;&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, ratione, soluta. A aut commodi cum, deserunt illum magnam nisi perspiciatis quis vero voluptas! Cumque eum iure neque omnis veritatis. Aut beatae consectetur culpa dolorem eius, exercitationem fuga harum ipsa ipsam laborum necessitatibus nemo non officiis perspiciatis placeat praesentium provident quaerat quisquam quod sapiente sit tempore tenetur veniam! At, cupiditate temporibus.&lt;/p&gt;&lt;ul&gt; &lt;li&gt;Purus Bibendum Commodo Risus Quam&lt;/li&gt; &lt;li&gt;Purus Risus Quam&lt;/li&gt; &lt;li&gt;Commodo Risus Quam&lt;/li&gt; &lt;li&gt;Purus Bibendum Commodo&lt;/li&gt; &lt;li&gt;Risus Quam&lt;/li&gt;&lt;/ul&gt;
          </div>
        </div>
      </article>
    </section>
  </section>
</section>
`;

exports[`Storyshots organisms|hero Hero video 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__organism"
    >
      <article
        class="hero hero--video"
      >
        <picture>
          <source
            media="(min-width: 1201px)"
            srcset=""
          />
           
          <!---->
           
          <source
            media="(min-width: 768px)"
            srcset=""
          />
           
          <!---->
           
          <!---->
           
          <source
            media="(max-width: 480px)"
            srcset="/generator/svg/1000/500"
          />
           
          <img
            alt=""
            class="img--responsive hero-video__image--full img--lazy"
            src=""
          />
        </picture>
         
        <div
          class="hero-video__image--overlay"
        />
         
        <section
          class="container"
        >
          <div
            class="flexgrid__cell--xs-6 hero--video-reset"
          >
            <h1
              class="hero-video__headline"
            >
              Lorum ipsum dolor sit amet consectetuer
            </h1>
             
            <p
              class="copy--intro"
            >
              Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida.
            </p>
             
            <button
              class="link--large"
              icon="play-video"
              style="background-color: red;"
              type="button"
            >
              Play Video
            </button>
          </div>
        </section>
         
        <!---->
      </article>
    </section>
  </section>
</section>
`;
